--- a/src/main/webapp/WEB-INF/templates/profile.html
+++ b/src/main/webapp/WEB-INF/templates/profile.html
@@ -32,7 +32,6 @@
                     <div class="ibox-content profile-content">
                         <!--/*@thymesVar id="userdetail" type="entitys.UserdetailEntity"*/-->
                         <h4>
-
                             <strong th:text="${userdetail.getUsername()}">Monica Smith</strong>
                         </h4>
                         <p>
@@ -50,12 +49,12 @@
                         <div class="user-button">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <button type="button" class="btn btn-primary btn-sm btn-block">
-                                        <i class="fa fa-envelope"></i> 编辑</button>
+                                    <a th:href="@{/editProfile}" type="button" class="btn btn-primary btn-sm btn-block">
+                                        <i class="fa fa-pencil-square-o"></i> 编辑</a>
                                 </div>
-                                <div th:if="${userdetail}" class="col-md-6">
+                                <div class="col-md-6">
                                     <button type="button" class="btn btn-default btn-sm btn-block">
-                                        <i class="fa fa-coffee"></i> 发送消息</button>
+                                        <i class="fa fa-envelope"></i> 修改头像</button>
                                 </div>
                             </div>
                         </div>
@@ -67,7 +66,11 @@
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
                     <h5>我的异常处理小组</h5>
+
                     <div class="ibox-tools">
+                        <a class="btn btn-primary btn-xs">
+                            <i class="fa fa-plus"></i>
+                             新建小组</a>
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
                         </a>
@@ -91,6 +94,8 @@
             </div>
         </div>
     </div>
+
+
 
 </body>
 </html>
