--- a/src/main/webapp/WEB-INF/templates/layout/default.html
+++ b/src/main/webapp/WEB-INF/templates/layout/default.html
@@ -20,6 +20,7 @@
 
     <link th:href="@{/resources/css/animate.css}" rel="stylesheet"/>
     <link th:href="@{/resources/css/style.css}" rel="stylesheet"/>
+    <link th:href="@{/resources/css/plugins/sweetalert/sweetalert.css}" rel="stylesheet">
     <title>首页</title>
 </head>
 <body>
@@ -122,71 +123,31 @@
                         </li>
                         <li class="dropdown">
                             <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                                <i class="fa fa-envelope"></i>
-                                <span class="label label-warning">16</span>
-                            </a>
-                            <ul class="dropdown-menu dropdown-messages">
-                                <li>
-                                    <div class="dropdown-messages-box">
-                                        <a href="profile.html" class="pull-left">
-                                            <img alt="image" class="img-circle" src="/resources/img/a7.jpg">
-                                        </a>
-                                        <div class="media-body">
-                                            <small class="pull-right">46h ago</small>
-                                            <strong>Mike Loreipsum</strong> started following
-                                            <strong>Monica Smith</strong>.
-                                            <br>
-                                            <small class="text-muted">3 days ago at 7:58 pm - 10.06.2014</small>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="divider"></li>
-                                <li>
-                                    <div class="dropdown-messages-box">
-                                        <a href="profile.html" class="pull-left">
-                                            <img alt="image" class="img-circle" src="/resources/img/a4.jpg">
-                                        </a>
-                                        <div class="media-body ">
-                                            <small class="pull-right text-navy">5h ago</small>
-                                            <strong>Chris Johnatan Overtunk</strong> started following
-                                            <strong>Monica Smith</strong>.
-                                            <br>
-                                            <small class="text-muted">Yesterday 1:21 pm - 11.06.2014</small>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="divider"></li>
-                                <li>
-                                    <div class="dropdown-messages-box">
-                                        <a href="profile.html" class="pull-left">
-                                            <img alt="image" class="img-circle" src="/resources/img/profile.jpg">
-                                        </a>
-                                        <div class="media-body ">
-                                            <small class="pull-right">23h ago</small>
-                                            <strong>Monica Smith</strong> love
-                                            <strong>Kim Smith</strong>.
-                                            <br>
-                                            <small class="text-muted">2 days ago at 2:30 am - 11.06.2014</small>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="divider"></li>
-                                <li>
-                                    <div class="text-center link-block">
-                                        <a href="mailbox.html">
-                                            <i class="fa fa-envelope"></i>
-                                            <strong>Read All Messages</strong>
-                                        </a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
                                 <i class="fa fa-bell"></i>
                                 <span class="label label-primary">8</span>
                             </a>
                             <ul class="dropdown-menu dropdown-alerts">
+                                <!--/*@thymesVar id="messageList" type="java.util.List<entitys.MessageEntity>"*/-->
+                                <li th:each="message:${messageList}">
+
+                                    <a th:id="${message.getId()}" th:if="${message.getType().equals('NORMOL')}"
+                                    th:onclick="'javascript:nomorMessageClick(\''+${message.getId()}+'\',this);'">
+                                        <div>
+                                            <i class="fa fa-envelope fa-fw"></i> 新通知消息
+                                        </div>
+                                    </a>
+                                    <a th:if="${message.getType().equals('WITH_CHOICE')}" href="">
+                                        <div>
+                                            <i class="fa fa-envelope fa-fw"></i> 新邀请
+                                        </div>
+                                    </a>
+                                    <a th:if="${message.getType().equals('WITH_LINK')}" th:href="${message.getLinkurl()}">
+                                        <div>
+                                            <i class="fa fa-envelope fa-fw"></i> 新流程
+                                        </div>
+                                    </a>
+                                    <div class="divider"></div>
+                                </li>
                                 <li>
                                     <a href="mailbox.html">
                                         <div>
@@ -265,6 +226,53 @@
 <!-- Custom and plugin javascript -->
 <script th:src="@{/resources/js/inspinia.js}"></script>
 <script th:src="@{/resources/js/plugins/pace/pace.min.js}"></script>
+<script th:src="@{/resources/js/plugins/sweetalert/sweetalert.min.js}"></script>
+    <script>
+        function nomorMessageClick(messageid,that){
+            $.get('/message/nomorl/'+messageid,function (date) {
+                swal({
+                    title: "通知",
+                    text: date,
+                    type: "success"
+                },function(){
+                    $(that).remove();
+                });
+            });
+
+
+        }
+
+        function withChoiceMessageClick(messageid,that){
+
+            $.get('/message/withChoice/'+messageid,function (date) {
+                swal({
+                        title: "你是否同意?",
+                        text: date,
+                        type: "warning",
+                        showCancelButton: true,
+                        confirmButtonColor: "#DD6B55",
+                        confirmButtonText: "同意!",
+                        cancelButtonText: "不同意!",
+                        closeOnConfirm: false,
+                        closeOnCancel: false },
+                    function (isConfirm) {
+                        if (isConfirm) {
+                            $.get('/message/agree/'+messageid,function(){
+                                swal("成功!", "你已经同意!", "success");
+                                $(that).remove();
+                            });
+
+                        } else {
+                            $.get('message/refuse/'+messageid,function() {
+                                swal("成功!", "你已经拒绝!", "error");
+                                $(that).remove();
+                            })
+                        }
+                    });
+            });
+
+        }
+    </script>
 
 
 <!-- Flot -->
