--- a/src/main/webapp/WEB-INF/templates/home.html
+++ b/src/main/webapp/WEB-INF/templates/home.html
@@ -19,7 +19,7 @@
     <div class="row" layout:fragment="content">
         <h1>你好</h1>
 
-        <h1 th:text="${bumen}"></h1>
+        <div th:utext="${test}"></div>
 
         <a th:href="@{/home}">test</a>
     </div>
