添加文件上传与下载

--- a/src/main/webapp/WEB-INF/templates/home.html
+++ b/src/main/webapp/WEB-INF/templates/home.html
@@ -19,9 +19,9 @@
     <div class="row" layout:fragment="content">
         <h1>你好</h1>
 
-        <div th:utext="${test}"></div>
 
-        <a th:href="@{/home}">test</a>
+
+        <a th:href="@{/exceptionHandle/downloadfile/20180119001}">test</a>
     </div>
 
 
