--- a/src/main/webapp/WEB-INF/templates/launchHandFrom.html
+++ b/src/main/webapp/WEB-INF/templates/launchHandFrom.html
@@ -3,14 +3,15 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorator="/layout/default">
 <head>
-    <title>title</title>
+    <title>发起异常</title>
     <link th:href="@{/resources/css/plugins/datapicker/datepicker3.css}" rel="stylesheet">
     <link th:href="@{/resources/css/plugins/summernote/summernote.css}" rel="stylesheet">
     <link th:href="@{/resources/css/plugins/summernote/summernote-bs3.css}" rel="stylesheet">
+    <link th:href="@{/resources/css/plugins/jasny/jasny-bootstrap.min.css}" rel="stylesheet">
 </head>
 <body>
 <div class="col-lg-10" layout:fragment="pageheader">
-    <h2>首页</h2>
+    <h2>发起异常</h2>
     <ol class="breadcrumb">
         <li>
             <a href="/">首页</a>
@@ -48,13 +49,13 @@
                 </div>
             </div>
             <div class="ibox-content">
-                <form action="" method="post" class="form-horizontal">
+                <form action="" method="post" class="form-horizontal" enctype="multipart/form-data">
                     <!--/*@thymesVar id="userdetail" type="entitys.UserdetailEntity"*/-->
                     <div class="form-group">
                         <label for="happendate" class="control-label col-sm-2">发生日期</label>
                         <div class="col-sm-5">
                             <div class="input-group date datapicker">
-                                <input id="happendate" name="happendate" type="text" class="form-control"/>
+                                <input data-date-end-date="0d" id="happendate" name="happendate" type="text" class="form-control"/>
                                 <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                             </div>
                         </div>
@@ -62,13 +63,13 @@
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
-                        <label for="handteam" class="col-sm-2 control-label">处理小组</label>
+                        <label for="handleteam" class="col-sm-2 control-label">处理小组</label>
                         <div class="col-sm-5">
-                            <select class="form-control m-b" name="handteam" id="handteam">
-                                <option>option 1</option>
-                                <option>option 2</option>
-                                <option>option 3</option>
-                                <option>option 4</option>
+                            <select class="form-control m-b" name="handleteam" id="handleteam">
+                                <option th:each="group:${groups}">
+                                    <span th:text="${group.groupname}+'-'+${group.charger}"></span>
+
+                                </option>
                             </select>
                         </div>
                     </div>
@@ -76,18 +77,15 @@
                     <div class="form-group">
                         <label for="theme" class="col-sm-2 control-label">主题</label>
                         <div class="col-sm-10">
-                            <input id="theme" name="email" type="text" class="form-control"/>
+                            <input id="theme" name="theme" type="text" class="form-control"/>
                         </div>
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
-                        <label for="exclass" class="col-sm-2 control-label">异常分类</label>
+                        <label for="clazz" class="col-sm-2 control-label">异常分类</label>
                         <div class="col-sm-5">
-                            <select class="form-control m-b" name="exclass" id="exclass">
-                                <option>option 1</option>
-                                <option>option 2</option>
-                                <option>option 3</option>
-                                <option>option 4</option>
+                            <select class="form-control m-b" name="clazz" id="clazz">
+                                <option th:each="clazz:${clazzs}"><span th:text="${clazz.name}"></span></option>
                             </select>
                         </div>
                     </div>
@@ -102,14 +100,22 @@
                     <div class="form-group">
                         <label for="other" class="col-sm-2 control-label">其他信息</label>
                         <div class="col-sm-10">
-                            <div class="summernote" id="other"></div>
+                            <textarea class="summernote" name="other" id="other"></textarea>
                         </div>
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
-                        <label for="updatefile" class="col-sm-2 control-label">上传文件</label>
+                        <label for="file" class="col-sm-2 control-label">上传文件</label>
                         <div class="col-sm-10">
-                            <input id="updatefile" name="updatefile" type="file"  class="form-control"/>
+                            <div class="fileinput fileinput-new" data-provides="fileinput">
+                                <span class="btn btn-default btn-file">
+                                    <span class="fileinput-new">选择文件</span>
+                                    <span class="fileinput-exists">重选文件</span>
+                                    <input type="file" id="file" name="file">
+                                </span>
+                                <span class="fileinput-filename"></span>
+                                <a href="#" class="close fileinput-exists" data-dismiss="fileinput" style="float: none">&times;</a>
+                            </div>
                         </div>
                     </div>
                     <div class="hr-line-dashed"></div>
@@ -131,33 +137,29 @@
     <script th:src="@{/resources/js/plugins/datapicker/bootstrap-datepicker.js}"></script>
     <script th:src="@{/resources/js/plugins/summernote/summernote.min.js}"></script>
     <script th:src="@{/resources/js/plugins/summernote/summernote-zh-CN.js}"></script>
+    <script th:src="@{/resources/js/plugins/datapicker/bootstrap-datepicker.zh-CN.js}"></script>
+    <script th:src="@{/resources/js/plugins/jasny/jasny-bootstrap.min.js}"></script>
 </div>
 
 
 <script layout:fragment="script">
 
-    $.fn.datepicker.dates['zh'] = {
-        days: ["星期天", "星期一", "星期二", "星期三", "星期四", "星期五", "星期六"],
-        daysShort: ["周日", "周一", "周二", "周三", "周四", "周五", "周六"],
-        daysMin: ["日", "一", "二", "三", "四", "五", "六"],
-        months: ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12"],
-        monthsShort: ["一", "二", "三", "四", "五", "六", "七", "八", "九", "十", "十一", "十二"],
-        today: "今天",
-        clear: "清除",
-        format: "yyyy-MM-dd",
-        titleFormat: "yyyy年MM月", /* Leverages same syntax as 'format' */
-        weekStart: 0
-    };
+
     $('.datapicker').datepicker({
-        todayBtn: "linked",
-        keyboardNavigation: false,
-        forceParse: false,
-        calendarWeeks: true,
-        autoclose: true,
-        language: 'zh',
-        format:"yyyy-MM-dd"
+        todayBtn:true,
+        autoclose:true,
+        format:'yyyy-mm-dd',
+        language: 'zh-CN'
+
     });
     $('.summernote').summernote({
+        toolbar:[
+            ['style', ['bold', 'italic', 'underline', 'clear']],
+            ['fontsize', ['fontsize']],
+            ['color', ['color']],
+            ['para', ['ul', 'ol', 'paragraph']],
+            ['height', ['height']]
+        ],
         height:300,
         minHeight: null,
         maxHeight: null,
