添加处理异常画面

--- a/src/main/webapp/WEB-INF/templates/home.html
+++ b/src/main/webapp/WEB-INF/templates/home.html
@@ -16,12 +16,15 @@
 
         </ol>
     </div>
-    <div class="row" layout:fragment="content">
+
+    <div class="wrapper wrapper-content" layout:fragment="content">
+    <div class="row" >
         <h1>你好</h1>
 
 
 
         <a th:href="@{/exceptionHandle/downloadfile/20180119001}">test</a>
+    </div>
     </div>
 
 
