--- a/src/main/webapp/WEB-INF/templates/launchHandFrom.html
+++ b/src/main/webapp/WEB-INF/templates/launchHandFrom.html
@@ -23,7 +23,8 @@
     </ol>
 </div>
 
-<div class="row animated fadeInRight" layout:fragment="content">
+<div class="wrapper wrapper-content" layout:fragment="content">
+<div class="row animated fadeInRight">
     <div class="col-lg-12">
         <div class="ibox float-e-margins">
             <div class="ibox-title">
@@ -132,7 +133,7 @@
     </div>
 
 </div>
-
+</div>
 <div layout:fragment="addjs">
     <script th:src="@{/resources/js/plugins/datapicker/bootstrap-datepicker.js}"></script>
     <script th:src="@{/resources/js/plugins/summernote/summernote.min.js}"></script>
