--- a/src/main/webapp/WEB-INF/templates/profile.html
+++ b/src/main/webapp/WEB-INF/templates/profile.html
@@ -19,7 +19,8 @@
 
         </ol>
     </div>
-    <div layout:fragment="content" class="row animated fadeInRight">
+    <div class="wrapper wrapper-content" layout:fragment="content">
+    <div  class="row animated fadeInRight">
         <div class="col-md-4">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
@@ -123,6 +124,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
 
