--- a/src/main/webapp/WEB-INF/templates/editprofile.html
+++ b/src/main/webapp/WEB-INF/templates/editprofile.html
@@ -18,7 +18,8 @@
 
         </ol>
     </div>
-    <div class="row animated fadeInRight" layout:fragment="content">
+    <div class="wrapper wrapper-content" layout:fragment="content">
+    <div class="row animated fadeInRight">
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
@@ -71,6 +72,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
 
