--- a/src/main/webapp/WEB-INF/templates/selectUser.html
+++ b/src/main/webapp/WEB-INF/templates/selectUser.html
@@ -19,7 +19,8 @@
     </ol>
 </div>
 
-<div class="row animated fadeInRight" layout:fragment="content">
+<div class="wrapper wrapper-content" layout:fragment="content">
+<div class="row animated fadeInRight">
     <div class="col-lg-12">
         <div class="ibox float-e-margins">
             <div class="ibox-title">
@@ -81,7 +82,7 @@
         </div>
     </div>
 </div>
-
+</div>
 
 </body>
 </html>
