完善异常处理功能

--- a/src/main/webapp/WEB-INF/templates/layout/default.html
+++ b/src/main/webapp/WEB-INF/templates/layout/default.html
@@ -218,13 +218,13 @@
         </div>
     </div>
 
-<script th:src="@{/resources/js/jquery-3.1.1.min.js}"></script>
+<script src="/resources/js/jquery-3.1.1.min.js"></script>
 <script th:src="@{/resources/js/bootstrap.min.js}"></script>
 <script th:src="@{/resources/js/plugins/metisMenu/jquery.metisMenu.js}"></script>
 <script th:src="@{/resources/js/plugins/slimscroll/jquery.slimscroll.min.js}"></script>
 
 <!-- Custom and plugin javascript -->
-<script th:src="@{/resources/js/inspinia.js}"></script>
+<script src="/resources/js/inspinia.js"></script>
 <script th:src="@{/resources/js/plugins/pace/pace.min.js}"></script>
 <script th:src="@{/resources/js/plugins/sweetalert/sweetalert.min.js}"></script>
     <div layout:fragment="addjs"></div>
