添加异常列表

--- a/src/main/webapp/WEB-INF/templates/layout/default.html
+++ b/src/main/webapp/WEB-INF/templates/layout/default.html
@@ -79,14 +79,12 @@
                                 <a th:href="@{/exceptionHandle/launch}">发起异常</a>
                             </li>
                             <li>
-                                <a href="form_advanced.html">需处理</a>
+                                <a th:href="@{/exceptionHandle/myException/tome}">需处理的</a>
                             </li>
                             <li>
-                                <a href="form_wizard.html">已完成</a>
+                                <a th:href="@{/exceptionHandle/myException/my}">我发起的</a>
                             </li>
-                            <li>
-                                <a href="form_file_upload.html">处理中</a>
-                            </li>
+
                             
                         </ul>
                     </li>
