修改用户页面残留

--- a/src/main/webapp/WEB-INF/templates/addycclgroup.html
+++ b/src/main/webapp/WEB-INF/templates/addycclgroup.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorator="layout/default">
 <head>
-    <title>创建异常处理小组</title>
+    <title>TECHSEM OA | 创建异常处理小组</title>
 </head>
 <body>
 
