--- a/src/main/webapp/WEB-INF/templates/editprofile.html
+++ b/src/main/webapp/WEB-INF/templates/editprofile.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorator="layout/default">
 <head>
-    <title>编辑个人信息</title>
+    <title>TECHSEM OA | 编辑个人信息</title>
 </head>
 <body>
     <div class="col-lg-10" layout:fragment="pageheader">
