--- a/src/main/webapp/WEB-INF/templates/exceptionList.html
+++ b/src/main/webapp/WEB-INF/templates/exceptionList.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="layout/default">
 <head>
-    <title th:text="${title}"></title>
+    <title th:text="'TECHSEM OA | '+${title}"></title>
 </head>
 <body>
 <div class="col-lg-10" layout:fragment="pageheader">
