--- a/src/main/webapp/WEB-INF/templates/home.html
+++ b/src/main/webapp/WEB-INF/templates/home.html
@@ -4,7 +4,7 @@
       layout:decorator="layout/default">
 <head>
     <meta charset="UTF-8"/>
-    <title>home</title>
+    <title>TECHSEM OA | 首页</title>
 </head>
 <body>
     <div class="col-lg-10" layout:fragment="pageheader">
