--- a/src/main/webapp/WEB-INF/templates/launchHandFrom.html
+++ b/src/main/webapp/WEB-INF/templates/launchHandFrom.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorator="/layout/default">
 <head>
-    <title>发起异常</title>
+    <title>TECHSEM OA | 发起异常</title>
     <link th:href="@{/resources/css/plugins/datapicker/datepicker3.css}" rel="stylesheet">
     <link th:href="@{/resources/css/plugins/summernote/summernote.css}" rel="stylesheet">
     <link th:href="@{/resources/css/plugins/summernote/summernote-bs3.css}" rel="stylesheet">
