--- a/src/main/webapp/WEB-INF/templates/login.html
+++ b/src/main/webapp/WEB-INF/templates/login.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>INSPINIA | Login</title>
+    <title>TECHSEM OA | 登录</title>
 
     <link href="/resources/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="/resources/font-awesome/css/font-awesome.css" rel="stylesheet"/>
@@ -20,24 +20,25 @@
 
 <body class="gray-bg">
 
+<div class="text-center">
+
+    <h1 class="logo-name">TECHSEM</h1>
+
+</div>
     <div class="middle-box text-center loginscreen animated fadeInDown">
         <div>
-            <div>
 
-                <h1 class="logo-name">IN+</h1>
-
-            </div>
-            <h3>Welcome to IN+</h3>
-            <p>Perfectly designed and precisely prepared admin theme with over 50 pages with extra new web app views.
+            <h3>欢迎登录</h3>
+            <p>请输入用户名密码
                 <!--Continually expanded and constantly improved Inspinia Admin Them (IN+)-->
             </p>
-            <p>Login in. To see it in action.</p>
+
             <form class="m-t" role="form" th:action="@{/login}"  method="post">
                 <div class="form-group">
-                    <input name="username" type="text" class="form-control" placeholder="Username" required=""/>
+                    <input name="username" type="text" class="form-control" placeholder="用户名" required=""/>
                 </div>
                 <div class="form-group">
-                    <input name="password" type="password" class="form-control" placeholder="Password" required=""/>
+                    <input name="password" type="password" class="form-control" placeholder="密码" required=""/>
                 </div>
 
                 <div>
@@ -46,11 +47,10 @@
                 </div>
                 <button type="submit" class="btn btn-primary block full-width m-b">登录</button>
 
-                <a href="#"><small>Forgot password?</small></a>
-                <p class="text-muted text-center"><small>Do not have an account?</small></p>
-                <a class="btn btn-sm btn-white btn-block" href="register.html">Create an account</a>
+                <a href="#"><small>忘记密码?</small></a>
+
             </form>
-            <p class="m-t"> <small>Inspinia we app framework base on Bootstrap 3 &copy; 2014</small> </p>
+            <p class="m-t"> <small>Create by shnsg @ 2017</small> </p>
         </div>
     </div>
 
