--- a/src/main/webapp/WEB-INF/templates/selectUser.html
+++ b/src/main/webapp/WEB-INF/templates/selectUser.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorator="layout/default">
 <head>
-    <title>查找人员</title>
+    <title>TECHSEM OA | 查找人员</title>
 </head>
 <body>
 <div class="col-lg-10" layout:fragment="pageheader">
