--- a/src/main/webapp/WEB-INF/templates/exceptionReadOnly.html
+++ b/src/main/webapp/WEB-INF/templates/exceptionReadOnly.html
@@ -8,7 +8,7 @@
     <link th:href="@{/resources/css/plugins/jasny/jasny-bootstrap.min.css}" rel="stylesheet">
     <link th:href="@{/resources/css/plugins/codemirror/codemirror.css}" rel="stylesheet">
     <link th:href="@{/resources/css/plugins/codemirror/ambiance.css}" rel="stylesheet">
-    <title>异常处理</title>
+    <title>TECHSEM OA | 异常处理</title>
 </head>
 <body>
 <div class="col-lg-10" layout:fragment="pageheader">
