--- a/src/main/webapp/WEB-INF/templates/profile.html
+++ b/src/main/webapp/WEB-INF/templates/profile.html
@@ -4,7 +4,7 @@
       layout:decorator="layout/default">
 <head>
 
-    <title>个人信息</title>
+    <title>TECHSEM OA | 个人信息</title>
 </head>
 <body>
     <div class="col-lg-10" layout:fragment="pageheader">
