--- a/src/main/webapp/WEB-INF/templates/ycclmembers.html
+++ b/src/main/webapp/WEB-INF/templates/ycclmembers.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorator="layout/default">
 <head>
-    <title>异常小组成员</title>
+    <title>TECHSEM OA | 异常小组成员</title>
 </head>
 <body>
 
