--- a/src/main/webapp/WEB-INF/templates/knowledge/handing.html
+++ b/src/main/webapp/WEB-INF/templates/knowledge/handing.html
@@ -63,17 +63,44 @@
                 <div class="element-detail-box">
                     <div class="tab-content">
                         <div th:unless="${currhandling}" class="tab-pane active">
+                            <div th:if="${submiter and modify != true}" class="pull-right">
+                                <a th:href="'/knowledge/modify/'+${detile.bid}" class="btn btn-primary btn-xs">修改</a>
+                            </div>
                             <div class="small text-muted">
                                 <i class="fa fa-clock-o"></i> <span th:text="${detile.happendate}"></span>
                             </div>
                             <div>
                                 <h1 th:text="'主题:'+' '+${detile.zt}"></h1>
                                 <p th:text="'发生日期: '+${detile.happendate}"></p>
+                                <p th:text="'异常分类: '+${detile.ycfl}"></p>
+                                <p th:text="'关键词: '+${detile.gjc}"></p>
+                                <p th:text="'次要关键词: '+${detile.cygjc}"></p>
                                 <p>填报人: <span style="color: lightseagreen;" th:text="${detile.submiter}"></span></p>
-                                <h4 th:text="'异常描述'"></h4>
-                                <p th:utext="${detile.ycms}"></p>
+                                <div th:unless="${modify}">
+                                    <h4 th:text="'异常描述'"></h4>
+                                    <p th:utext="${detile.ycms}"></p>
+                                </div>
+                                <div th:if="${modify}">
+                                    <form action="" method="post" class="form-horizontal">
+                                        <div class="form-group">
+                                            <h4 class="col-sm-2" th:text="'异常描述'"></h4>
+                                            <div class="col-sm-12">
+                                                <textarea th:text="${detile.ycms}" class="summernote" name="ycms" id="ycms"></textarea>
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group">
+                                            <div class="col-sm-4 col-sm-offset-8">
+                                                <button class="btn btn-primary btn-w-m" type="submit">提交</button>
+                                            </div>
+
+                                        </div>
+                                    </form>
+
+                                </div>
+
                             </div>
-                            <div class="row">
+                            <div th:unless="${modify}" class="row">
                                 <div class="col-lg-12">
                                     <div class="ibox float-e-margins">
                                         <div class="ibox-title">
