添加知识分享演示 添加查询模块

--- a/src/main/webapp/WEB-INF/templates/knowledge/handing.html
+++ b/src/main/webapp/WEB-INF/templates/knowledge/handing.html
@@ -17,8 +17,11 @@
         <li>
             <a href="/">首页</a>
         </li>
+        <li>
+            <a href="/knowledge">知识分享</a>
+        </li>
         <li class="active">
-            <strong>知识分享</strong>
+            <strong th:text="${detile.bid}">发起分享</strong>
         </li>
 
     </ol>
