--- a/src/main/webapp/WEB-INF/templates/knowledge/submit.html
+++ b/src/main/webapp/WEB-INF/templates/knowledge/submit.html
@@ -15,8 +15,14 @@
 <div class="col-lg-10" layout:fragment="pageheader">
     <h2>知识分享</h2>
     <ol class="breadcrumb">
+        <li>
+            <a href="/">首页</a>
+        </li>
+        <li>
+            <a href="/knowledge">知识分享</a>
+        </li>
         <li class="active">
-            <a href="/">知识分享</a>
+            <strong th:text="'发起分享'">发起分享</strong>
         </li>
 
     </ol>
