--- a/src/main/webapp/WEB-INF/templates/layout/default.html
+++ b/src/main/webapp/WEB-INF/templates/layout/default.html
@@ -88,6 +88,14 @@
                             
                         </ul>
                     </li>
+                    <li th:class="${active.getMainName().equals('Knowlege')}?'active':null">
+                        <a href="/knowledge">
+                            <i class="fa fa-edit"></i>
+                            <span class="nav-label">知识分享</span>
+
+                        </a>
+
+                    </li>
 
 
                 </ul>
